[gd_scene load_steps=8 format=3 uid="uid://f6xspoi1ws8y"]

[ext_resource type="Script" uid="uid://orxaa36p4s0v" path="res://objects/plate/plate.gd" id="1_kccox"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pv8fa"]
size = Vector3(2, 1, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kccox"]
transparency = 4
shading_mode = 0

[sub_resource type="BoxMesh" id="BoxMesh_pv8fa"]
material = SubResource("StandardMaterial3D_kccox")
size = Vector3(2, 0.2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pggkr"]
albedo_color = Color(0.93333334, 0.47843137, 0.46666667, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pv8fa"]
shading_mode = 0
albedo_color = Color(0.93333334, 0.47843137, 0.46666667, 1)

[sub_resource type="BoxMesh" id="BoxMesh_kccox"]
material = SubResource("StandardMaterial3D_pv8fa")
size = Vector3(1.6, 0.4, 1.6)

[node name="plate" type="Area3D" groups=["plate"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_kccox")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_pv8fa")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
mesh = SubResource("BoxMesh_pv8fa")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
material_override = SubResource("StandardMaterial3D_pggkr")
mesh = SubResource("BoxMesh_kccox")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
